<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Meemo</string>

    <!-- setting -->
    <string name="setting_title">Setting</string>
    <string name="setting_title_clearcache">Clear Cache</string>
    <string name="setting_summary_clearcache">Clear app index cache if there is something wrong.</string>
    <string name="setting_key_clearcache" translatable="false">key_setting_clearcache</string>
    <string name="setting_title_background">Run in background</string>
    <string name="setting_summary_background">Keep me alive in background.</string>
    <string name="setting_key_background" translatable="false">>key_setting_background</string>
    <string name="setting_title_feedback">Feedback</string>
    <string name="setting_summary_feedback">Send me your advice or bug report.</string>
    <string name="setting_key_feedback" translatable="false">>key_setting_feedback</string>
    <string name="setting_title_autoboot">AutoBoot</string>
    <string name="setting_summary_autoboot">Display float view after booting.</string>
    <string name="setting_key_autoboot" translatable="false">>key_setting_autoboot</string>
    <string name="setting_title_bigscreen_list">Big screen gesture</string>
    <string name="setting_summary_bigscreen_list">Make app list more convenient for big screen.</string>
    <string name="setting_key_bigscreen_list" translatable="false">>key_setting_bigscreen_list</string>

    <string name="setting_title_about">About Meemo</string>
    <string name="setting_key_about" translatable="false">>key_setting_about</string>
    <string name="setting_title_verison">Version %1$s</string>
    <string name="setting_summary_version">Rate this app.</string>
    <string name="setting_key_version" translatable="false">>key_setting_version</string>
    <string name="setting_title_author">Sai</string>
    <string name="setting_summary_author">Visit my Weibo.</string>
    <string name="setting_key_author" translatable="false">>key_setting_author</string>
    <string name="setting_title_update">Update</string>
    <string name="setting_summary_update">Check new version in your App Store.</string>
    <string name="setting_key_update" translatable="false">>key_setting_update</string>

    <string name="setting_key_floatview" translatable="false">key_setting_floatview</string>
    <string name="setting_title_floatview">FloatView</string>
    <string name="setting_summary_floatview">Display a float view in screen to launch Meemo quickly.</string>

    <string name="setting_key_floatview_setting" translatable="false">>key_setting_floatview_settting</string>
    <string name="setting_title_floatview_setting">FloatView Setting</string>

    <string name="setting_key_floatview_edge" translatable="false">key_setting_float_edge</string>
    <string name="setting_title_floatview_edge">Align to edge</string>

    <string name="setting_key_floatview_size" translatable="false">key_setting_float_floatview_size</string>
    <string name="setting_title_floatview_size">FloatView Size</string>

    <!-- normal -->
    <string name="rebuild_cache">Rebuilding</string>
    <string name="rebuild_cache_summary">Please wait...</string>
    <string name="feedback_mail_title">Feedback of Meemo</string>
    <string name="send_mail">Send Mail</string>


</resources>
