<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/setting_key_clearcache"
        android:title="@string/setting_title_clearcache"
        android:summary="@string/setting_summary_clearcache"
        />
    <CheckBoxPreference
        android:key="@string/setting_key_floatview"
        android:title="@string/setting_title_floatview"
        android:summary="@string/setting_summary_floatview"
        android:defaultValue="true"
        />
    <Preference
        android:key="@string/setting_key_feedback"
        android:title="@string/setting_title_feedback"
        android:summary="@string/setting_summary_feedback"
        />
    <PreferenceScreen
        android:key="@string/setting_key_about"
        android:title="@string/setting_title_about"
        >
        <Preference
            android:key="@string/setting_key_version"
            android:title="@string/setting_title_verison"
            android:summary="@string/setting_summary_version"
            />
        <Preference
            android:key="@string/setting_key_author"
            android:title="@string/setting_title_author"
            android:summary="@string/setting_summary_author"
            />
        <Preference
            android:key="@string/setting_key_update"
            android:title="@string/setting_title_update"
            android:summary="@string/setting_summary_update"
            />
    </PreferenceScreen>
</PreferenceScreen>